RESOLVED FIXED130382
[iOS][WebKit2] <rdar://problem/16330387> Do not use the keyboard rect for computing the general unobscuredRect, only use it for centering
https://bugs.webkit.org/show_bug.cgi?id=130382
Summary [iOS][WebKit2] <rdar://problem/16330387> Do not use the keyboard rect for com...
Benjamin Poulain
Reported 2014-03-17 20:18:52 PDT
[iOS][WebKit2] <rdar://problem/16330387> Do not use the keyboard rect for computing the general unobscuredRect, only use it for centering
Attachments
Patch (4.49 KB, patch)
2014-03-17 20:20 PDT, Benjamin Poulain
simon.fraser: review+
Benjamin Poulain
Comment 1 2014-03-17 20:20:28 PDT
Simon Fraser (smfr)
Comment 2 2014-03-17 22:28:39 PDT
Comment on attachment 227003 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=227003&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:632 > +- (CGRect)_unobscuredContentRectIncludingKeyboard This name is confusing. Does the unobscuring include or exclude the keyboard?
Benjamin Poulain
Comment 3 2014-03-19 14:55:44 PDT
Note You need to log in before you can comment on or make changes to this bug.